--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "backend",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": {
+    "email": "thewish.it@gmail.com",
+    "name": "tranduchuy"
+  },
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "nest build",
+    "build": "nest build --webpack",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -29,10 +32,9 @@
     "@types/aws-lambda": "^8.10.85",
     "@vendia/serverless-express": "^4.5.2",
     "aws-lambda": "^1.0.7",
+    "aws-serverless-express": "^3.4.0",
     "firebase": "^9.5.0",
     "firebase-admin": "^10.0.0",
-    "firebase-functions": "^3.16.0",
-    "moment": "^2.29.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,6 +43,7 @@
     "typeorm": "^0.2.41"
   },
   "devDependencies": {
+    "@hewmen/serverless-plugin-typescript": "^1.1.17",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
@@ -54,7 +57,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
+    "plugin": "^0.3.3",
     "prettier": "^2.4.1",
+    "serverless-plugin-optimize": "^4.2.1-rc.1",
+    "serverless-plugin-typescript": "^2.1.0",
+    "serverless-plugin-warmup": "^6.0.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
